--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "resolutions": {
-    "source-map": "^0.8.0-beta.0"
-  },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^13.4.0",
     "contentful": "^7.14.4",
@@ -27,8 +24,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.3.5",
-    "source-map": "^0.8.0-beta.0"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "prettier": "2.2.1"
