--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "resolutions": {
-    "source-map": "^0.8.0-beta.0"
+    "source-map": "^0.8.0-beta.0",
+    "webpack": "5.52.1"
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^13.4.0",
